# engram

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
Agent/: ENGRAM_FIX_PLAN.md
dashboard/: index.html  package-lock.json
dashboard/src/: App.css  App.tsx  api.ts
docs/: SERVICE.md
engram/: __init__.py  bootstrap_environment.py  core.py  dashboard.html  export.py  server.py  server_daemon.py
engram.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
engram/layers/: semantic_index.py
engram/utils/: embedding.py  token_budget.py
scripts/: cleanup_engram.py
tests/: test_budget.py  test_engram.py  test_export.py  test_recall.py  test_server.py
