[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "engram"
version = "0.1.0"
description = "Multi-layered memory architecture for Hermes AI agents"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.setuptools]
packages = ["engram", "engram.layers", "engram.utils"]
